--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "ext-mbstring": "*",
         "zendframework/zend-mail": "^2.5",
         "soundasleep/html2text": "~0.2",
-        "mpdf/mpdf": "6.1.5",
+        "softcomtecnologia/mpdf": "6.1.5",
         "endroid/qrcode": "1.*@dev"
     },
     "require-dev": {
